fix(styles) restore wrapping of long text in pre blocks

--- a/src/style/_markdown.scss
+++ b/src/style/_markdown.scss
@@ -8,6 +8,7 @@
     white-space: pre-wrap;
     background: none;
     padding: 0px;
+    overflow-wrap: break-word;
   }
 
   code {
